SpringBoot3-Vue3/k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: springboot-vue-demo
  labels:
    name: springboot-vue-demo
